# gpu-box

./: .gitignore  README.md  cli.py  do  manage.py  pyproject.toml  requirements.txt
gpu_box/: server.py  types.py
gpu_box/models/: base.py  ner.py  whisper.py  whispercpp.py
gpu_box/servers/: starlette.py
